# Slam_demo

./: CDoubleVector.cpp  CDynamicArray.cpp  CDynamicArray.h  CMakeLists.txt  CMatlabFileReading.cpp  CMatlabFileReading.h  DoubleVector.cpp  DoubleVector.h  FileIO.cpp  FileIO.h  KalmanFilter.cpp  KalmanFilter.h  KalmanFilterStrategy.cpp  KalmanFilterStrategy.h  Logger.cpp  Logger.h  LoggingKalmanFilterDecorator.cpp  LoggingKalmanFilterDecorator.h  README.md  SimulationSetup.cpp  SimulationSetup.h  VehicleModel.cpp  VehicleModel.h  constants.h  functions.cpp  functions.h  main.cpp  types.h
docs/: autonomous-land-vehicle-navigation-using-millimeter-wave-radar.pdf:Zone.Identifier  durrant-whyte1996.pdf:Zone.Identifier
figures/: innovation_C++.fig  innovation_C++_vs_Matlab.fig  vehicle_path_estimation_C++_vs_Matlab.fig  vehicle_state_covariance_C++_vs_matlab.fig  vehicle_state_prediction_C++_vs_matlab.fig
inputs/: Beacons_large_5Loops.txt  Beacons_small_5Loops.txt  RefPath_large_5Loops.txt  RefPath_small_5Loops.txt
